[gd_scene load_steps=45 format=3 uid="uid://cytm1o5rvw3rs"]

[ext_resource type="Script" path="res://scripts/spinning_wheel_scene.gd" id="1_6osv2"]
[ext_resource type="Texture2D" uid="uid://chxh1khv18d8u" path="res://assets/ui_component/SpinSceneBackGround2.png" id="1_m0v4g"]
[ext_resource type="PackedScene" uid="uid://bi80485um3huy" path="res://scenes/croak.tscn" id="3_chno3"]
[ext_resource type="Texture2D" uid="uid://cgwupadr5mpdx" path="res://assets/frogs/PurpleBlue/ToxicFrogPurpleBlue_Attack.png" id="7_lhqqv"]
[ext_resource type="Texture2D" uid="uid://d03dac6bvknk" path="res://assets/frogs/PurpleBlue/ToxicFrogPurpleBlue_Idle.png" id="8_c54qc"]
[ext_resource type="Texture2D" uid="uid://cf5huud2gyb85" path="res://assets/ui_component/Buttons2.png" id="8_kbbje"]
[ext_resource type="FontFile" uid="uid://dv1b0itpdjj42" path="res://assets/fonts/PeaberryBase.ttf" id="9_5p143"]
[ext_resource type="Shader" path="res://shaders/Text.gdshader" id="11_00dsm"]
[ext_resource type="Texture2D" uid="uid://diqqat2gwxtf4" path="res://assets/ui_component/Buttons.png" id="12_ep1lx"]
[ext_resource type="Script" path="res://scripts/ui_button.gd" id="13_b4p64"]
[ext_resource type="Texture2D" uid="uid://tt2efj36ed4" path="res://assets/ui_component/crank-up.png" id="14_cmqk0"]
[ext_resource type="Texture2D" uid="uid://cu3a4o1okf7ac" path="res://assets/ui_component/crank-down.png" id="15_86sd3"]
[ext_resource type="Texture2D" uid="uid://c1205mc4ygvox" path="res://assets/ui_component/SpinningWheelCircleFrame.png" id="15_em7ss"]
[ext_resource type="PackedScene" uid="uid://bgu0xtfb6cqir" path="res://scenes/spinning_wheel.tscn" id="16_0rs5p"]
[ext_resource type="Texture2D" uid="uid://b5amxp0ctjggy" path="res://assets/ui_component/InstructionBackground.png" id="16_001b6"]
[ext_resource type="Texture2D" uid="uid://dukwqyi34tran" path="res://assets/ui_component/DialogueBox.png" id="17_key17"]
[ext_resource type="Texture2D" uid="uid://bw2lynv3rovrv" path="res://assets/ui_component/ArrowPointer.png" id="18_o6cbe"]
[ext_resource type="Texture2D" uid="uid://c3r7un1dpr1v2" path="res://assets/ui_component/Labeller.png" id="18_w4m7j"]
[ext_resource type="PackedScene" uid="uid://c8cxiia03ynyq" path="res://scenes/ui_scenes/pop_up.tscn" id="19_kqxvw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_gnw5u"]
shader = ExtResource("11_00dsm")
shader_parameter/frequency = 1.0
shader_parameter/height = 2.0
shader_parameter/speed = 2.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_asjnp"]
texture = ExtResource("12_ep1lx")
region_rect = Rect2(15, 13, 81, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lgmlp"]
texture = ExtResource("12_ep1lx")
region_rect = Rect2(15, 61, 81, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_v7lww"]
texture = ExtResource("12_ep1lx")
region_rect = Rect2(15, 109, 81, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_4otcm"]
texture = ExtResource("12_ep1lx")
region_rect = Rect2(15, 61, 81, 26)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ulpbw"]
texture = ExtResource("12_ep1lx")
region_rect = Rect2(15, 61, 81, 26)

[sub_resource type="AtlasTexture" id="AtlasTexture_jk1fk"]
atlas = ExtResource("7_lhqqv")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ith02"]
atlas = ExtResource("7_lhqqv")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_mdumx"]
atlas = ExtResource("7_lhqqv")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jaagk"]
atlas = ExtResource("7_lhqqv")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kraa7"]
atlas = ExtResource("7_lhqqv")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gebg"]
atlas = ExtResource("7_lhqqv")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b8jpo"]
atlas = ExtResource("8_c54qc")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_nh17u"]
atlas = ExtResource("8_c54qc")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2kl5"]
atlas = ExtResource("8_c54qc")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t37l0"]
atlas = ExtResource("8_c54qc")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_n63q6"]
atlas = ExtResource("8_c54qc")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_fki1y"]
atlas = ExtResource("8_c54qc")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gtbel"]
atlas = ExtResource("8_c54qc")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_b62kd"]
atlas = ExtResource("8_c54qc")
region = Rect2(336, 0, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_06234"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jk1fk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ith02")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mdumx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jaagk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kraa7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gebg")
}],
"loop": false,
"name": &"PurpleFrogAttack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_b8jpo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nh17u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2kl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t37l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n63q6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fki1y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gtbel")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b62kd")
}],
"loop": true,
"name": &"PurpleFrogIdle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_dr5e1"]
radius = 12.9363

[sub_resource type="SpriteFrames" id="SpriteFrames_75sha"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("14_cmqk0")
}],
"loop": false,
"name": &"Normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("15_86sd3")
}],
"loop": true,
"name": &"Spin",
"speed": 5.0
}]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_7cp1f"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_86ojo"]
shader = ExtResource("11_00dsm")
shader_parameter/frequency = 2.0
shader_parameter/height = 2.0
shader_parameter/speed = 1.0

[node name="SpinningWheelScene" type="Node2D"]
script = ExtResource("1_6osv2")

[node name="UIElements" type="Node2D" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="UIElements"]
offset_right = 1152.0
offset_bottom = 648.0
texture = ExtResource("1_m0v4g")

[node name="Buttons2" type="Sprite2D" parent="UIElements"]
position = Vector2(572, 50)
scale = Vector2(6.08333, 4.02041)
texture = ExtResource("8_kbbje")
region_enabled = true
region_rect = Rect2(0, 96.2584, 108, 48.0504)

[node name="Label" type="Label" parent="UIElements"]
offset_left = 441.0
offset_top = 30.0
offset_right = 729.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("9_5p143")
theme_override_font_sizes/font_size = 48
text = "Spin to win"

[node name="Buttons3" type="Sprite2D" parent="UIElements"]
position = Vector2(992, 162)
scale = Vector2(3.14583, 5.32132)
texture = ExtResource("8_kbbje")
region_enabled = true
region_rect = Rect2(-0.115158, 51.0071, 108.23, 45.7179)

[node name="CroakCount" type="Label" parent="UIElements"]
offset_left = 1005.0
offset_top = 121.0
offset_right = 1065.0
offset_bottom = 169.0
theme_override_fonts/font = ExtResource("9_5p143")
theme_override_font_sizes/font_size = 48
text = "52"

[node name="CroakOrCroaks" type="Label" parent="UIElements"]
offset_left = 976.0
offset_top = 167.0
offset_right = 1102.0
offset_bottom = 215.0
theme_override_fonts/font = ExtResource("9_5p143")
theme_override_font_sizes/font_size = 32
text = "CROAKS"

[node name="Croak" parent="UIElements" instance=ExtResource("3_chno3")]
position = Vector2(932, 159)
scale = Vector2(0.15, 0.15)

[node name="Back" type="Button" parent="UIElements"]
material = SubResource("ShaderMaterial_gnw5u")
offset_left = 43.0
offset_top = 35.0
offset_right = 259.0
offset_bottom = 107.0
scale = Vector2(0.5, 0.5)
theme_override_colors/font_color = Color(0.223529, 0.223529, 0.223529, 1)
theme_override_fonts/font = ExtResource("9_5p143")
theme_override_font_sizes/font_size = 32
theme_override_styles/normal = SubResource("StyleBoxTexture_asjnp")
theme_override_styles/hover = SubResource("StyleBoxTexture_lgmlp")
theme_override_styles/pressed = SubResource("StyleBoxTexture_v7lww")
theme_override_styles/disabled = SubResource("StyleBoxTexture_4otcm")
theme_override_styles/focus = SubResource("StyleBoxTexture_ulpbw")
text = "Back"
script = ExtResource("13_b4p64")

[node name="SpinningWheelCircleFrame" type="Sprite2D" parent="."]
position = Vector2(595, 330)
scale = Vector2(0.6, 0.6)
texture = ExtResource("15_em7ss")
region_rect = Rect2(310.427, 163.164, 651.284, 623.56)

[node name="SpinningWheel" parent="SpinningWheelCircleFrame" instance=ExtResource("16_0rs5p")]
rotation = -1.74846e-07
scale = Vector2(0.933333, 0.933333)

[node name="Labeller" type="Sprite2D" parent="SpinningWheelCircleFrame"]
scale = Vector2(1.66667, 1.66667)
texture = ExtResource("18_w4m7j")

[node name="RayCast2D" type="RayCast2D" parent="SpinningWheelCircleFrame/Labeller"]
target_position = Vector2(3, 192)
collision_mask = 128
hit_from_inside = true
collide_with_areas = true

[node name="SpinMech" type="Node2D" parent="."]

[node name="Frog" type="AnimatedSprite2D" parent="SpinMech"]
self_modulate = Color(0.854902, 0.854902, 0.854902, 1)
position = Vector2(1025, 610)
scale = Vector2(4.2, 4.2)
sprite_frames = SubResource("SpriteFrames_06234")
animation = &"PurpleFrogAttack"
autoplay = "PurpleFrogIdle"
flip_h = true

[node name="FrogHead" type="Area2D" parent="SpinMech/Frog"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="SpinMech/Frog/FrogHead"]
position = Vector2(2.61905, 0.952381)
shape = SubResource("CircleShape2D_dr5e1")

[node name="Crank" type="AnimatedSprite2D" parent="SpinMech"]
position = Vector2(926, 619)
scale = Vector2(4.2, 4.2)
sprite_frames = SubResource("SpriteFrames_75sha")
animation = &"Normal"
autoplay = "Normal"

[node name="InstructionBackground" type="Sprite2D" parent="."]
position = Vector2(183, 417)
scale = Vector2(0.38, 0.38)
texture = ExtResource("16_001b6")

[node name="Label2" type="Label" parent="InstructionBackground"]
offset_left = -230.0
offset_top = -400.0
offset_right = 210.0
offset_bottom = -337.0
theme_override_fonts/font = ExtResource("9_5p143")
theme_override_font_sizes/font_size = 62
text = "Instructions"

[node name="Label3" type="Label" parent="InstructionBackground"]
offset_left = -302.0
offset_top = -266.0
offset_right = 332.0
offset_bottom = -167.0
theme_override_fonts/font = ExtResource("9_5p143")
theme_override_font_sizes/font_size = 48
text = "Do Not Gamble. Gambling Bad Bad"
autowrap_mode = 3

[node name="Label4" type="Label" parent="InstructionBackground"]
offset_left = -304.0
offset_top = -124.0
offset_right = 162.0
offset_bottom = -68.0
theme_override_fonts/font = ExtResource("9_5p143")
theme_override_font_sizes/font_size = 48
text = "20 Croak Per Spin"
autowrap_mode = 3

[node name="Label5" type="Label" parent="InstructionBackground"]
offset_left = -304.0
offset_top = -28.0
offset_right = 314.0
offset_bottom = 71.0
theme_override_fonts/font = ExtResource("9_5p143")
theme_override_font_sizes/font_size = 48
text = "Dont Hit The Frog just pat it on its head"
autowrap_mode = 3

[node name="Label6" type="Label" parent="InstructionBackground"]
offset_left = -306.0
offset_top = 114.0
offset_right = 312.0
offset_bottom = 213.0
theme_override_fonts/font = ExtResource("9_5p143")
theme_override_font_sizes/font_size = 48
text = "Get more Croak from completing the Levels"
autowrap_mode = 3

[node name="Label7" type="Label" parent="InstructionBackground"]
offset_left = -308.0
offset_top = 258.0
offset_right = 310.0
offset_bottom = 357.0
theme_override_fonts/font = ExtResource("9_5p143")
theme_override_font_sizes/font_size = 48
text = "Good Gambling, I mean Good Luck "
autowrap_mode = 3

[node name="NinePatchRect" type="NinePatchRect" parent="InstructionBackground"]
material = SubResource("ShaderMaterial_7cp1f")
offset_left = 2076.32
offset_top = 292.105
offset_right = 2223.32
offset_bottom = 331.105
scale = Vector2(2, 2)
texture = ExtResource("17_key17")

[node name="Label" type="Label" parent="InstructionBackground/NinePatchRect"]
material = SubResource("ShaderMaterial_86ojo")
layout_mode = 0
offset_left = 16.0
offset_top = 10.0
offset_right = 130.0
offset_bottom = 33.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("9_5p143")
text = "Pat Me Please"

[node name="ArrowPointer" type="Sprite2D" parent="."]
position = Vector2(596, 558)
scale = Vector2(0.4, 0.4)
texture = ExtResource("18_o6cbe")

[node name="PopUP" parent="." instance=ExtResource("19_kqxvw")]
visible = false
position = Vector2(17, 15)

[connection signal="pressed" from="UIElements/Back" to="." method="_on_back_pressed"]
[connection signal="mouse_entered" from="SpinMech/Frog/FrogHead" to="." method="_on_frog_head_mouse_entered"]
[connection signal="mouse_exited" from="SpinMech/Frog/FrogHead" to="." method="_on_frog_head_mouse_exited"]
